[tool.poetry]
name = "porty-new-sample"
version = "0.1.0"
description = ""
authors = ["y-uchiida <y.uchiida@nirneege.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
